# yentl

./: .gitignore  README.md  makefile  notes  todo  yentl.cabal
scripts/: test001.hs  test002.hs  test003.hs
scripts/test001/: readme.txt
scripts/test002/: readme.txt
src/: Demo.hs  Main.hs  Yentl.hs
src/Yentl/: Algebra.hs  Error.hs  Geo.hs  Geometry.hs  Model.hs  Output.hs  Theorems.hs  Verify.hs  View.hs
src/Yentl/Algebra/: Classes.hs  Equation.hs  Path.hs
src/Yentl/Algebra/Data/: AtMost.hs  Mat2.hs  Mat3.hs  Mat4.hs
src/Yentl/Algebra/Equation/: Box.hs  Circle.hs  Curve.hs  LinearForm.hs  MinorArc.hs  Optimize.hs  Quadratic.hs  Ray.hs  Segment.hs  SemiCircle.hs  Solution.hs  System.hs  System2.hs
src/Yentl/Algebra/Number/: AlgReal.hs  ConReal.hs  Digits.hs  Integer.hs  Ord.hs  Rational.hs  Sign.hs  Slope.hs
src/Yentl/Algebra/Path/: Bezier.hs
src/Yentl/Geometry/: CongruenceGeometry.hs  IncidenceGeometry.hs  OrderedGeometry.hs  PlaneGeometry.hs
src/Yentl/Model/: CartesianPlane.hs  PoincareDisc.hs  PoincarePlane.hs
src/Yentl/Theorems/: CongruenceGeometry.hs  IncidenceGeometry.hs  OrderedGeometry.hs  PlaneGeometry.hs
src/Yentl/View/: Animate.hs  Cartesian.hs  Command.hs  Format.hs  Options.hs  PostScript.hs
test/: Main.hs
test/Test/: Algebra.hs  Arb.hs  Combinator.hs  Geometry.hs  Laws.hs  Verify.hs
test/Test/Algebra/: Classes.hs  Data.hs  Equation.hs  Gen.hs  Number.hs
test/Test/Geometry/: CongruenceGeometry.hs  IncidenceGeometry.hs  OrderedGeometry.hs  PlaneGeometry.hs
test/Test/Model/: CartesianPlane.hs  PoincareDisc.hs  PoincarePlane.hs
(+4 files in other folders)
